# plonky2_goldibear

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain
.github/workflows/: continuous-integration-workflow.yml
field/: Cargo.toml
field/src/: baby_bear.rs  batch_util.rs  cosets.rs  extension_algebra.rs  fft.rs  field_testing.rs  interpolation.rs  lib.rs  p3_risc0_baby_bear.rs  packable.rs  packed.rs  prime_field_testing.rs  secp256k1_base.rs  secp256k1_scalar.rs  types.rs  zero_poly_coset.rs
field/src/arch/x86_64/: avx2_goldilocks_field.rs  avx512_goldilocks_field.rs
field/src/extension/: mod.rs
field/src/monty/: data_traits.rs  extension.rs  mds.rs  monty_31.rs  poseidon2.rs  utils.rs
field/src/p3_risc0_baby_bear/: field.rs  mod.rs  poseidon2.rs
field/src/p3_risc0_baby_bear/x86_64_avx2/: packing.rs  poseidon2.rs
field/src/p3_risc0_baby_bear/x86_64_avx512/: packing.rs  poseidon2.rs
field/src/polynomial/: division.rs  mod.rs  mod_bck.rs
maybe_rayon/: Cargo.toml
maybe_rayon/src/: lib.rs
plonky2/: Cargo.toml
plonky2/benches/: ffts.rs  field_arithmetic.rs  hashing.rs  merkle.rs  recursion.rs  reverse_index_bits.rs  transpose.rs
plonky2/benches/allocator/: mod.rs
plonky2/examples/: bench_recursion.rs  factorial.rs  fibonacci.rs  fibonacci_serialization.rs  range_check.rs  square_root.rs
plonky2/src/: lib.rs  lookup_test.rs
plonky2/src/fri/: challenges.rs  oracle.rs  proof.rs  prover.rs  recursive_verifier.rs  reduction_strategies.rs  structure.rs  validate_shape.rs  verifier.rs  witness_util.rs
plonky2/src/gadgets/: arithmetic.rs  arithmetic_extension.rs  hash.rs  interpolation.rs  lookup.rs  polynomial.rs  random_access.rs  range_check.rs  select.rs  split_base.rs  split_join.rs
plonky2/src/gates/: add_many.rs  apply_mat4.rs  arithmetic_base.rs  arithmetic_extension.rs  base_sum.rs  constant.rs  coset_interpolation.rs  exponentiation.rs  gate.rs  gate_testing.rs  lookup.rs  lookup_table.rs  mod.rs  multiplication_extension.rs  noop.rs  packed_util.rs  poseidon.rs  poseidon2_babybear.rs  poseidon2_internal_permutation.rs  poseidon2_risc0_babybear.rs  poseidon_goldilocks.rs  poseidon_goldilocks_mds.rs  poseidon_mds.rs  public_input.rs  random_access.rs  reducing.rs  reducing_extension.rs  selectors.rs  util.rs
plonky2/src/hash/: hash_types.rs  hashing.rs  keccak.rs  merkle_proofs.rs  merkle_tree.rs  mod.rs  path_compression.rs  poseidon.rs  poseidon2_31bits.rs  poseidon2_babybear.rs  poseidon2_risc0_babybear.rs  poseidon_64bits.rs  poseidon_goldilocks.rs
plonky2/src/hash/arch/aarch64/: poseidon_goldilocks_neon.rs
plonky2/src/hash/arch/x86_64/: poseidon_goldilocks_avx2_bmi2.rs
plonky2/src/iop/: challenger.rs  ext_target.rs  generator.rs  witness.rs
plonky2/src/plonk/: circuit_builder.rs  circuit_data.rs  config.rs  get_challenges.rs  mod.rs  permutation_argument.rs  plonk_common.rs  proof.rs  prover.rs  validate_shape.rs  vanishing_poly.rs  vars.rs  verifier.rs
plonky2/src/recursion/: conditional_recursive_verifier.rs  cyclic_recursion.rs  dummy_circuit.rs  mod.rs  recursive_verifier.rs  regression_test_data.rs
plonky2/src/util/: context_tree.rs  mod.rs  partial_products.rs  proving_process_info.rs  reducing.rs  strided_view.rs  timing.rs
plonky2/src/util/serialization/: gate_serialization.rs  generator_serialization.rs  mod.rs
plonky3/: Cargo.toml
plonky3/src/: lib.rs
starky/: Cargo.toml
starky/src/: config.rs  constraint_consumer.rs  cross_table_lookup.rs  fibonacci_stark.rs  get_challenges.rs  lib.rs  lookup.rs  permutation_stark.rs  proof.rs  prover.rs  recursive_verifier.rs  stark.rs  stark_testing.rs  unconstrained_stark.rs  util.rs  vanishing_poly.rs  verifier.rs
util/: Cargo.toml
util/src/: lib.rs
