[workspace]
members = ["field", "maybe_rayon", "plonky2", "starky", "util"]
resolver = "2"

[workspace.dependencies]
ahash = { version = "0.8.7", default-features = false, features = ["compile-time-rng"] } # NOTE: Be sure to keep this version the same as the dependency in `hashbrown`.
anyhow = { version = "1.0.40", default-features = false }
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] } # NOTE: When upgrading, see `ahash` dependency.
itertools = { version = "0.11.0", default-features = false }
log = { version = "0.4.14", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
static_assertions = { version = "1.1.0", default-features = false }
unroll = { version = "0.1.5", default-features = false }

p3-field = { path = "../Plonky3/field"}
p3-poseidon2 = { path = "../Plonky3/poseidon2"}
p3-goldilocks = { path = "../Plonky3/goldilocks", features = ["nightly-features"]}
p3-baby-bear = { path = "../Plonky3/baby-bear", features = ["nightly-features"]}
p3-symmetric = { path = "../Plonky3/symmetric"}
p3-monty-31 = { path = "../Plonky3/monty-31", features = ["nightly-features"]}
p3-field-testing = { path = "../Plonky3/field-testing"}
p3-dft = { path = "../Plonky3/dft"}

##[profile.release]
##opt-level = 3
##incremental = true
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/0xPolygonZero/plonky2"
repository = "https://github.com/0xPolygonZero/plonky2"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky2"]
categories = ["cryptography"]
