[package]
name = "plonky2_field"
description = "Finite field arithmetic"
version = "0.3.8"
authors = ["Daniel Lubarov <daniel@lubarov.com>", "William Borgeaud <williamborgeaud@gmail.com>", "Jacqueline Nabaglo <j@nab.gl>", "Hamish Ivey-Law <hamish@ivey-law.name>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true, features = ["use_alloc"] }
num = { workspace = true, features = ["alloc"] }
rand = { workspace = true, features = ["getrandom"] }
serde = { workspace = true, features = ["alloc"] }
static_assertions = { workspace = true }
unroll = { workspace = true }
# Local dependencies
plonky2_util = { path = "../util", default-features = false }
p3-field = { workspace = true }
p3-monty-31 = { workspace = true }
p3-goldilocks = { workspace = true }
p3-baby-bear = { workspace = true }

lazy_static = {version = "1.5.0", default-features = false, features = ["spin_no_std"], optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]

[dev-dependencies]
p3-field-testing = { workspace = true }
p3-dft = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
serde_json = { version = "1.0", features = [] }

[features]
default = []
disable-randomness = ["rand_xoshiro", "lazy_static"]